@@ -1,13 +1,9 @@
-
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.020.
 use strict;
 use warnings;
 
 use 5.008001;
 
 use ExtUtils::MakeMaker 6.17;
-
-
 
 my %WriteMakefileArgs = (
   "ABSTRACT" => "Salted Challenge Response Authentication Mechanism (RFC 5802)",
@@ -16,11 +12,11 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => "6.17"
   },
   "DISTNAME" => "Authen-SCRAM",
-  "EXE_FILES" => [],
   "LICENSE" => "apache",
+  "MIN_PERL_VERSION" => "5.008001",
   "NAME" => "Authen::SCRAM",
   "PREREQ_PM" => {
-    "Authen::SASL::SASLprep" => 0,
+    "Authen::SASL::SASLprep" => "1.100",
     "Carp" => 0,
     "Crypt::URandom" => 0,
     "Encode" => 0,
@@ -52,7 +48,7 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
-  "Authen::SASL::SASLprep" => 0,
+  "Authen::SASL::SASLprep" => "1.100",
   "Carp" => 0,
   "Crypt::URandom" => 0,
   "Encode" => 0,
@@ -86,6 +82,3 @@ delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
   unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
 
 WriteMakefile(%WriteMakefileArgs);
-
-
-
